# mint004

./: Anchor.toml  Cargo.toml
migrations/: deploy.ts
programs/trsales_license/: Cargo.toml
programs/trsales_license/src/: DEPLOYMENT_INSTRUCTIONS.md  SECURITY_CHECKLIST.md  lib.rs
tests/: playground_test.ts  trsales_license.test.ts  trsales_license.ts
