[package]
name = "trsales-license"
version = "0.1.0"
description = "TRSales License referral rewards program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trsales_license"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
